<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@drawable/ic_user" />

            <LinearLayout
                android:id="@+id/linerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView"
                android:layout_toRightOf="@+id/iconImageView"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_nombre" />
                <TextView
                    android:id="@+id/viewNombre"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ruc" />
                <TextView
                    android:id="@+id/viewRuc"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_representante" />
                <TextView
                    android:id="@+id/viewRepresentante"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_direccion" />
                <TextView
                    android:id="@+id/viewDireccion"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_telefono" />
                <TextView
                    android:id="@+id/viewTelefono"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_productos" />
                <TextView
                    android:id="@+id/viewProductos"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_credito" />
                <TextView
                    android:id="@+id/viewCredito"
                    android:layout_width="305dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

