<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/linerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_nombre" />
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewNombre"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/viewRuc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ruc" />
                <EditText
                    android:id="@+id/txtRuc"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewRuc"
                    android:inputType="phone"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/viewRepresentante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_representante" />
                <EditText
                    android:id="@+id/txtRepresentante"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewRepresentante"
                    android:inputType="text"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/viewDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_direccion" />
                <EditText
                    android:id="@+id/txtDireccion"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewDireccion"
                    android:inputType="text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_telefono" />
                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewTelefono"
                    android:inputType="phone"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/viewProductos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_productos" />
                <EditText
                    android:id="@+id/txtProductos"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewProductos"
                    android:inputType="text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewCredito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_credito" />
                <EditText
                    android:id="@+id/txtCredito"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewCredito"
                    android:inputType="text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnGuarda"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_guarda"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:text="Editar Proveedor"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/redDelete"
                    android:text="Eliminar Proveedor"
                    android:textSize="24sp" />

                <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:clickable="true"
                    android:src="@drawable/ic_edit" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:clickable="true"
                    android:src="@drawable/ic_delete" />-->
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>