<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/linerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/viewNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_nombre" />
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewNombre"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_telefono" />
                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewTelefono"
                    android:inputType="phone"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/viewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_email" />
                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:labelFor="@+id/viewEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnGuarda"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/guardar"
                    android:text="@string/btn_guarda"
                    android:textSize="24sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>